Fixed alignment issue, add Victoria's bio

--- a/custom.css
+++ b/custom.css
@@ -16,8 +16,5 @@
 }
 
 .person_detail {
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 600px;
+	
 }
